fix: make left-panel library visible on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 }
 
 @media (max-width: 800px) {
-  .left-panel, .right-panel {
+  .right-panel {
     display: none !important;
   }
 }
